# SunshineHeaderInterface

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml
include/: common_sdk.h  raw_fn.hxx  sdk.h
include/Dolphin/: AI.h  ARQ.h  CARD.h  DSP.h  DVD.h  GD.h  GX.h  MTX.h  OS.h  SI.h  THP.h  VI.h  VI_types.h  ctype.h  math.h  printf.h  stdarg.h  stddef.h  stdlib.h  string.h  types.h  wchar.h
include/JSystem/: JGeometry.hxx  config.hxx  equivtype.hxx  function.hxx  initializer_list.hxx  memory.hxx  stddef.hxx  type_traits.hxx  utility.hxx
include/JSystem/J2D/: J2DOrthoGraph.hxx  J2DPane.hxx  J2DPicture.hxx  J2DPrint.hxx  J2DScreen.hxx  J2DSetScreen.hxx  J2DTextBox.hxx  J2DTexture.hxx  J2DWindow.hxx
include/JSystem/J3D/: J3DAnimation.hxx  J3DAnmLoader.hxx  J3DCluster.hxx  J3DColor.hxx  J3DDrawBuffer.hxx  J3DJoint.hxx  J3DMaterial.hxx  J3DModel.hxx  J3DModelLoader.hxx  J3DModelLoaderDataBase.hxx  J3DNode.hxx  J3DPacket.hxx  J3DShape.hxx  J3DTexture.hxx  J3DTransform.hxx  J3DVertex.hxx
include/JSystem/JAudio/: JAIAnimeSound.hxx  JAIBasic.hxx  JAIHardStream.hxx  JAISound.hxx
include/JSystem/JDrama/: JDRActor.hxx  JDRAmbColor.hxx  JDRCamera.hxx  (+25 more)
include/Kamek/: kernel.h
include/SMS/: SMS.hxx  assert.h  equivtype.hxx  macros.h  ppc_intrinsics.h  raw_fn.hxx
include/dolphin/: AI.h  AR.h  ARQ.h  CARD.h  DB.h  DSP.h  DVD.h  GD.h  GX.h  GX_types.h  MTX.h  OS.h  PAD.h  PPCArch.h  SI.h  THP.h  VI.h  VI_types.h  ctype.h  math.h  mem.h  printf.h  stdlib.h  string.h  wchar.h
include/sms/: SMS.hxx  macros.h  rand.h  raw_fn.hxx
(+512 files in other folders)
